Slides de modelos

--- a/output/latex/presentacion.tex
+++ b/output/latex/presentacion.tex
@@ -186,7 +186,80 @@
 % SECCION 2 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Nuevos modelos}
 
-\begin{frame}{Diapositiva}
+\begin{frame}{Nuevos modelos}
+	\begin{itemize}
+		\item Creamos una serie de nuevos modelos:
+		\begin{enumerate}
+			\item \textit{Backward}.
+			\pause
+			\item \textit{Forward}.
+			\pause
+			\item \textit{Backward-Forward}.
+			\pause
+			\item \cod{add1}.
+			\pause
+			\item \cod{drop1}.
+			\pause
+			\item \textit{VIF}.
+			\pause
+			\item Regresión Multiple con la idea del Avance \textbf{1}.
+			\pause
+			\item \textit{Ridge Regression}.
+			\pause
+			\item \textit{Lasso Regression}.
+		\end{enumerate}
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{\textit{Backward}}
+	\begin{itemize}
+		\item abc
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{\textit{Forward}}
+	\begin{itemize}
+		\item abc
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{\textit{Backward-Forward}}
+	\begin{itemize}
+		\item abc
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{\cod{add1}}
+	\begin{itemize}
+		\item abc
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{\cod{drop1}}
+	\begin{itemize}
+		\item abc
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{\textit{VIF}}
+	\begin{itemize}
+		\item abc
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Regresión Multiple con la idea del Avance \textbf{1}}
+	\begin{itemize}
+		\item abc
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{\textit{Ridge Regression}}
+	\begin{itemize}
+		\item abc
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{\textit{Lasso Regression}}
 	\begin{itemize}
 		\item abc
 	\end{itemize}
